logs/ascension-kit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ascension_kit'...
Compiling './lib/python3.5/site-packages/ascension_kit/ascension_kit.py'...
***   File "./lib/python3.5/site-packages/ascension_kit/ascension_kit.py", line 19
    print "Ascension Kit:", __init__.__version__
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ascension_kit/format.py'...
***   File "./lib/python3.5/site-packages/ascension_kit/format.py", line 12
    print "No ascensions for %s. Total games: %s" % (p, len(player_dict[p]['dates']))
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ascension_kit/nao.py'...
***   File "./lib/python3.5/site-packages/ascension_kit/nao.py", line 47
    print "File is still fresh. Using local cached file for %s." % (p)
                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ascension_kit-0.0.14.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
